Bug 514367 - Unable to start konsole in kwin_wayland, crash at KWin::OutputFrame::presented
Summary: Unable to start konsole in kwin_wayland, crash at KWin::OutputFrame::presented
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: platform-x11-nested (other bugs)
Version First Reported In: master
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2026-01-09 12:17 UTC by Fushan Wen
Modified: 2026-01-11 12:10 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Fushan Wen 2026-01-09 12:17:49 UTC
SUMMARY
`kwin_wayland konsole` will cause a crash.

STEPS TO REPRODUCE
1. Run `kwin_wayland konsole`
2. Crash

OBSERVED RESULT
Crash

EXPECTED RESULT
A Konsole window appears in the nested kwin.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
(available in the Info Center app, or by running `kinfo` in a terminal window)
Linux/KDE Plasma: 
KDE Plasma Version: kwin6-6.5.80git.20260108T193339~4264dafd-ku.77.1.src
KDE Frameworks Version: 6.22.0
Qt Version: 6.10.1

ADDITIONAL INFORMATION
(gdb) bt
#0  0x00007f81a9a9dd3c in __pthread_kill_implementation () at /lib64/libc.so.6
#1  0x00007f81a9a427b6 in raise () at /lib64/libc.so.6
#2  0x00007f81ad848360 in KCrash::defaultCrashHandler(int) () at /lib64/libKF6Crash.so.6
#3  0x00007f81a9a42910 in <signal handler called> () at /lib64/libc.so.6
#4  0x00007f81ad0e4676 in KWin::OutputFrame::presented(std::chrono::duration<long, std::ratio<1l, 1000000000l> >, KWin::PresentationMode) ()
    at /lib64/libkwin.so.6
#5  0x00007f81ad41c6fe in KWin::X11WindowedOutput::handlePresentCompleteNotify(xcb_present_complete_notify_event_t*) () at /lib64/libkwin.so.6
#6  0x00007f81ad420b38 in ??? () at /lib64/libkwin.so.6
#7  0x00007f81aa435b20 in QtPrivate::QSlotObjectBase::call (this=0x5583a2d2fd20, r=<optimized out>, a=0x7ffc7a3c60b8)
    at /usr/src/debug/qtbase-everywhere-src-6.10.1/src/corelib/kernel/qobjectdefs_impl.h:461
#8  doActivate<false> (sender=0x5583a2a4f660, signal_index=4, argv=0x7ffc7a3c60b8)
    at /usr/src/debug/qtbase-everywhere-src-6.10.1/src/corelib/kernel/qobject.cpp:4257
#9  0x00007f81aa57c4dc in QEventDispatcherUNIX::processEvents (this=0x5583a2a4f660, flags=flags@entry=...)
    at /usr/src/debug/qtbase-everywhere-src-6.10.1/src/corelib/kernel/qeventdispatcher_unix.cpp:437
#10 0x00007f81ab186331 in QUnixEventDispatcherQPA::processEvents (this=<optimized out>, flags=...)
    at /usr/src/debug/qtbase-everywhere-src-6.10.1/src/gui/platform/unix/qunixeventdispatcher.cpp:28
#11 0x00007f81aa3dc1ab in QEventLoop::exec (this=0x7ffc7a3c6290, flags=...)
    at /usr/src/debug/qtbase-everywhere-src-6.10.1/src/corelib/global/qflags.h:77
#12 0x00007f81aa3d3183 in QCoreApplication::exec () at /usr/src/debug/qtbase-everywhere-src-6.10.1/src/corelib/kernel/qcoreapplication.cpp:1452
#13 0x000055837385998d in ??? ()
#14 0x00007f81a9a2b2fb in __libc_start_call_main () at /lib64/libc.so.6
#15 0x00007f81a9a2b3cb in __libc_start_main_impl () at /lib64/libc.so.6
#16 0x000055837385e945 in ??? ()
Comment 1 Bug Janitor Service 2026-01-09 13:01:34 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/8619
Comment 2 Vlad Zahorodnii 2026-01-11 12:10:31 UTC
Git commit a29fb8afaa7a41329df2575e328dad2cfb51ff9f by Vlad Zahorodnii.
Committed on 11/01/2026 at 11:41.
Pushed by vladz into branch 'master'.

Advance QAnimationDriver at the right point in time

RenderLoopDrivenQAnimationDriver::advanceToNextFrame() may call
RenderLoop::scheduleRepaint() indirectly.

If scheduleRepaint() is called before the pending frame count is
updated, the composite timer may be unexpectedly started again.
Related: bug 512968

M  +8    -5    src/compositor.cpp

https://invent.kde.org/plasma/kwin/-/commit/a29fb8afaa7a41329df2575e328dad2cfb51ff9f