Advance QAnimationDriver at the right point in time

RenderLoopDrivenQAnimationDriver::advanceToNextFrame() may call
RenderLoop::scheduleRepaint() indirectly.

If scheduleRepaint() is called before the pending frame count is
updated, the composite timer may be unexpectedly started again.

BUG: 514367
CCBUG: 512968